Fix blog preview in Edge
This actually also fixes the blog page in general, which is broken in dev/qa.

--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -210,6 +210,7 @@
         flex-direction: column;
         flex-shrink: 1;
         height: calc(100% - 2.5rem); // Firefox needs this
+        max-width: 100%; // Edge needs this
         padding: 0;
 
         .body {
